feat: add currency code to bank configuration and update price formatting
- Introduce currencyCode to BankConfiguration entity and repository
- Update PublicCatalogService to format fees, waivers, and discounts with currency codes
- Refactor test suite to reflect new "CUR 0.00" string format
- Remove redundant PricingMappers tests and test_output.txt artifacts
- Verified 334 tests passing across the catalog and pricing modules